app/assets/stylesheets/global.css.scss
@import 'compass/css3/inline-block';
@import 'compass/css3/border-radius';
@import 'compass/css3/box-shadow';
@import 'compass/css3/transition';
@import 'compass/typography';
@import 'base/colors';
@import 'base/fonts';

a {
  color: $action-color;

  &:hover {
    text-decoration: underline;
  }
}

h1, h2, h3, h4, h5 {
  margin-top: 0;
  font-weight: 300;
  font-family: $headline-font;

  strong {
    font-weight: 700;
  }
}

h1 {
  margin-bottom: 20px;
  font-size: 30px;
  color: #fff;
}

h2 {
  font-size: 24px;
  font-weight: normal;
}

h3 {
  font-size: 16px;
}

fieldset {
  margin: 20px;
  padding: 20px;
  background: $eggshell;
}

select {
  margin-bottom: 10px;
}

input.hasDatepicker {
  width: 100px;
}

input.button {
  font-weight: normal;
}

.inline-radio {
  margin-bottom: 10px;
}

label.collection_radio_buttons {
  display: inline-block;
}

ul.errors {
  li {
    padding: 3px 5px;
    list-style: none;
    background: $alert-color;
    color: $eggshell;
    font-weight: 700;
  }
}

.error {
  padding: 0 5px;
  background: $alert-color;
  color: $eggshell;
  font-weight: 700;
}

address {
  font-style: normal;
  line-height: 1.3em;
}

body {
  border-top: 3px solid $black;
  background: $body-background-color image_url('bg-body-gradient.png') repeat-x;
  font-family: $body-font;
}

a#branding {
  z-index: 2;
  display: block;
  width: 335px;
  height: 157px;
  background: image_url('hsboxscore-logo.png') no-repeat;
  text-indent: -999em;
}

header.global {
  position: relative;
  margin-top: 20px;
}

a.superadmin-dashboard {
  z-index: 4;
  position: absolute;
  top: 84px;
  right: 400px;
}

iframe#twitter-widget-0 {
  position: relative;
  left: 34px;
}

nav.global {
  text-align: right;
  white-space: nowrap;

  p {
    font-size: 11px;
    font-weight: 700;
    color: $body-text-color;
  }

  a.pill {
    display: inline-block;
    margin-left: 10px;
    padding: 8px 25px;
    @include border-radius(20px);
    @include single-box-shadow(transparentize(#333, 0.5), 0, 1px, 1px, 0px, true);
    background: #72B5D8;
    background: rgba(0, 0, 0, 0.1);
    color: #fff;
    font-size: 10px;
    font-weight: 700;
    text-transform: uppercase;

    small {
      font-size: 8px;
      position: relative;
      left: -3px;
    }

    &.home {
      width: 16px;
      text-indent: 999em;
      background-image: image_url('icon-home.png');
      background-position: center center;
      background-repeat: no-repeat;
    }

    &:hover {
      text-decoration: none;
      background-color: rgba(0, 0, 0, 0.2);
    }
  }

  a {
    display: inline-block;
    margin-left: 10px;
    color: white;
    text-transform: uppercase;
    font-size: 10px;
  }
}

#registration-links {
  display: inline-block;
  margin-left: 10px;
}

#content {
  min-height: 600px;
  margin-top: 20px;
}

#scores-nav {
  position: relative;
  z-index: 3;
  margin-bottom: 50px;
  padding: 3px;
  border: 1px solid #377393;
  @include single-box-shadow(rgba(#333, 0.3), 0, 3px, 3px);
  color: #676965;
  background: $eggshell;
  font-weight: 700;
  font-size: 11px;

  &.boys-basketball dd.boys-basketball a,
  &.girls-basketball dd.girls-basketball a {
    background: $black;
  }

  dl {
    display: inline-block;
    @include inline-block-list-container;

    dt, dd {
      @include inline-block-list-item;
      text-transform: uppercase;
    }

    dt {
      width: 20%;
      text-align: center;
    }

    dd {
      width: 40%;
      margin-right: -4px;
    }

    dd a {
      display: block;
      height: 40px;
      border: 1px solid $black;
      border-left: 1px solid #707070;
      padding: 13px 0;
      color: #FEB254;
      background: image_url('gradient-gray-nav.png') repeat-x;
      text-align: center;

      &.first {
        border-left-color: #393939;
      }

      &:hover {
        text-decoration: none;
      }

      &.current {
        color: $action-color;
      }
    }
  }
}

nav.admin-menu {
  position: relative;
  top: -50px;
  padding: 8px;
  border: 1px solid #666;
  border-top: none;
  background: #F1F1F1;

  ul {
    @include horizontal-list-container;
  }

  li {
    @include horizontal-list-item;
    padding: 0;

    a {
      font-size: 11px;
      text-transform: uppercase;

      &:hover {
        text-decoration: none;
      }

      &.secondary.button {
        border-left: none;
        color: #666;
      }
    }
  }
}

#main {
  margin-bottom: 30px;
  border-top: 3px solid $black;
  background: #fff;
  @include single-box-shadow(rgba(#333, 0.3), 3px, 3px, 3px);

  h1, h2, h3 {
    color: $black;
  }

  h1 {
    margin: 40px 0 20px;
  }

  h2 {
    font-size: 20px;
  }

  [class*="column"] + [class*="column"]:last-child {
    float: left;
  }
}

footer.global {
  color: #5099c3;
  font-weight: 700;
  text-transform: uppercase;

  p {
    font-size: 11px;
  }

  nav {
    ul {
      @include horizontal-list-container;
      white-space: nowrap;
    }

    li {
      @include horizontal-list-item;
      font-size: 11px;
      line-height: 11px;
      padding: 0 10px 0 7px;
      border-right: 1px solid;

      &:last-child {
        border: none;
      }

      a {
        color: #5099c3;
      }
    }
  }
}

